--- a/pages/chat.html
+++ b/pages/chat.html
@@ -1,10 +1,10 @@
 <meta charset="utf-8">
 <html>
     <head></head>
-    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="../style/chatStyle.css" />
     <body>
         <div>
-            <h1>Welcome</h1>
+            <h1>Chat</h1>
             <form>
                 <input type="text" />
                 <button>Send</button>
