--- a/pages/index.html
+++ b/pages/index.html
@@ -10,6 +10,10 @@
                     <h1>User</h1>
                     <input id="username" type="text" />
                 </form>
+                <div class="online">
+                    <h2>Online</h2>
+                    <ul id="users"></ul>
+                </div>
             </div>
             <div class="chat">
                 <div class="campo_msg">
@@ -105,12 +109,19 @@
                 background-color: white;
                 flex-direction: column;
                 justify-content: center;
+                overflow-y: scroll;
             }
             .campo_msg li{
                 list-style: none;
                 font-size: 20px;
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-weight: bold;
+            }
+            .online{
+                border-top: 1px solid black;
+                width: 90%;
+                margin-top: 5%;
+                margin-left: 5%;
             }
         </style>
     </body>
