resolved questions in code

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
                 </form>
                 <div class="online">
                     <h2>Online</h2>
-                    <ul id="users"></ul>
+                    <h3 id="users"></h3>
+                    <ul id="online_users">
+                    </ul>
                 </div>
             </div>
             <div class="chat">
