--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <html>
     <head>
-        <title>JLchat</title>
+        <title>2112chat</title>
         <link rel="stylesheet" href="style/style.css" />
     </head>
     <body>
