--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <form id="formmsg">
                     <input type="text" id="message" />
-                    <button>Send</button>
+                    <button id='sendbtn' disabled>Send</button>
                 </form>
             </div>
         </div>
