first page style update

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             <h1>Welcome to 2112chat</h1>
             <form id="form">
                 <input id="username" type="text" placeholder="Insert your name here" />
-                <button id="btnuser">Go to Chat</button>
+                <button id="btnuser" disabled>Go to Chat</button>
             </form>
         </div>
             
