first page style update

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,6 @@
     </head>
     <body>
         <div class="root">
-                <div class="online">
-                    <h2>Online</h2>
-                    <h3 id="users"></h3>
-                    <ul id="online_users">
-                    </ul>
-                </div>
             <div class="chat" id="divChat">
                 <div class="campo_msg">
                     <ul class="msg" id="msg"></ul>
@@ -20,6 +14,11 @@
                     <input type="text" id="message" />
                     <button id='sendbtn' disabled>Send</button>
                 </form>
+            </div>
+            <div id="online" class="online">
+                <h3 id="users"></h3>
+                <ul id="online_users">
+                </ul>
             </div>
         </div>
         <div class="user" id="divUser">
