add online template

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,7 @@
                 </form>
             </div>
             <div id="online" class="online">
-                <h3 id="users"></h3>
-                <ul id="online_users">
-                </ul>
+                <div class="ondiv"></div><span id="users"></span>
             </div>
         </div>
         <div class="user" id="divUser">
