--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
                 </div>
                 <form id="formmsg">
                     <input type="text" id="message" />
-                    <button id='sendbtn' disabled>Send</button>
+                    <button id='sendbtn'>Send</button>
                 </form>
             </div>
             <div id="online" class="online">
