--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
                 </div>
                 <form id="formmsg">
                     <input type="text" id="message" />
-                    <button id='sendbtn'>Send</button>
+                    <button disabled id='sendbtn'>Send</button>
                 </form>
             </div>
             <div id="online" class="online">
@@ -22,7 +22,7 @@
         <div class="user" id="divUser">
             <h1>Welcome to 2112chat</h1>
             <form id="form">
-                <input id="username" type="text" placeholder="Insert your name here" />
+                <input value="lucas" id="username" type="text" placeholder="Insert your name here" />
                 <button id="btnuser" disabled>Go to Chat</button>
             </form>
         </div>
