--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
                     <ul class="msg" id="msg"></ul>
                 </div>
                 <form id="formmsg">
-                    <input minlength="0" maxlength="50" type="text" id="message" />
+                    <input onchange="validation();" minlength="0" maxlength="50" type="text" id="message" />
                     <button disabled id='sendbtn'>Send</button>
                 </form>
             </div>
