--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,13 @@
                 <input value="lucas" id="username" type="text" placeholder="Insert your name here" />
                 <button id="btnuser" disabled>Go to Chat</button>
             </form>
+            <div class="ads">
+                <div class="author">
+                    <p>Developed by José Lucas</p>
+                    <p>Find me here: </p>
+                    <a href="https://github.com/JoseLucasapp">Github</a>
+                </div>
+            </div>
         </div>
             
         <script src="/socket.io/socket.io.js"></script>
