--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <div class="root">
+            <!--Chat-->
             <div class="chat" id="divChat">
                 <div class="campo_msg">
                     <ul class="msg" id="msg"></ul>
@@ -19,6 +20,7 @@
                 <div class="ondiv"></div><span id="users"></span>
             </div>
         </div>
+        <!--First Page username-->
         <div class="user" id="divUser">
             <h1>Welcome to 2112chat</h1>
             <form id="form">
