--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
                     <ul class="msg" id="msg"></ul>
                 </div>
                 <form id="formmsg">
-                    <input onchange="validation();" minlength="0" maxlength="50" type="text" id="message" />
+                    <input onchange="validation();" maxlength="50" type="text" id="message" />
                     <button disabled id='sendbtn'>Send</button>
                 </form>
             </div>
@@ -24,7 +24,7 @@
         <div class="user" id="divUser">
             <h1>Welcome to 2112chat</h1>
             <form id="form">
-                <input value="lucas" id="username" type="text" placeholder="Insert your name here" />
+                <input id="username" type="text" placeholder="Insert your name here" />
                 <button id="btnuser" disabled>Go to Chat</button>
             </form>
             <div class="ads">
