msg bug corrected

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
                     <ul class="msg" id="msg"></ul>
                 </div>
                 <form id="formmsg">
-                    <input onchange="validation();" maxlength="50" type="text" id="message" />
+                    <input maxlength="50" type="text" id="message" />
                     <button disabled id='sendbtn'>Send</button>
                 </form>
             </div>
