update style and html

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
                 </div>
                 <form id="formmsg">
                     <input maxlength="50" type="text" id="message" />
-                    <button disabled id='sendbtn'>Send</button>
+                    <button disabled id='sendbtn'></button>
                 </form>
             </div>
             <div id="online" class="online">
