--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>2112chat</title>
-        <link rel="stylesheet" href="style/style.css" />
+        <link rel="stylesheet" href="./style/style.css" />
     </head>
     <body>
         <div class="root">
